<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="12.5dp"
    android:background="@color/backgroundColor"
    >

    <TextView
        android:id="@+id/backButton"
        android:layout_width="16dp"
        android:layout_height="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/back_arrow_background"
        android:layout_marginTop="30dp"
        />

    <!--    User Information Header -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userInfoConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="14dp"
        android:background="@drawable/background_flash_pass_content"
        android:paddingVertical="29dp"
        android:paddingHorizontal="16dp"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/userInfoHeaderConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <ImageView
                android:id="@+id/passPhotoImageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:background="@drawable/border_item_image_view"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/passConstraintLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/passPhotoImageView"
                app:layout_constraintBottom_toBottomOf="@id/passPhotoImageView"
                app:layout_constraintStart_toEndOf="@id/passPhotoImageView"
                android:layout_marginStart="20dp"
                >

                <TextView
                    android:id="@+id/passTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/title_placeholder"
                    />
                <TextView
                    android:id="@+id/passSubtitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitle_placeholder"
                    app:layout_constraintTop_toBottomOf="@id/passTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="16sp"
                    android:textColor="@color/subtitleItemListpassColor"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                app:layout_constraintTop_toBottomOf="@id/passPhotoImageView"
                android:layout_marginTop="23dp"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/transparentWhite"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--User Content-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/userInfoContentLayout"
            android:layout_width="match_parent"
            android:layout_height="336dp"
            app:layout_constraintTop_toBottomOf="@id/userInfoHeaderConstraintLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/border_valid"
            >
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/userInfoContentImageView"
                android:layout_width="190dp"
                android:layout_height="190dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/circularImageView"
                android:background="@drawable/image_circle"
                />
            <View
                android:id="@+id/validationIconView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/border_circular_valid"
                app:layout_constraintBottom_toTopOf="@id/userInfoContentImageView"
                app:layout_constraintEnd_toEndOf="@id/userInfoContentImageView"
                />
            <View
                android:id="@+id/iconValidationTextView"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:background="@drawable/ic_baseline_done_24"
                android:textColor="@drawable/border_circular_invalid"
                app:layout_constraintStart_toStartOf="@id/validationIconView"
                app:layout_constraintEnd_toEndOf="@id/validationIconView"
                app:layout_constraintTop_toTopOf="@id/validationIconView"
                app:layout_constraintBottom_toBottomOf="@id/validationIconView"
                />

            <TextView
                android:id="@+id/userInfoNameSurnameTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_surname_placeholder"
                app:layout_constraintTop_toBottomOf="@id/userInfoContentImageView"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>


<!--        User information footer-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/userInfoFooterConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/userInfoContentLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="35dp"
            >

            <View
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="0.75dp"
                android:background="@color/transparentWhite"
                />
            <TextView
                android:id="@+id/timeExpirationTextView"
                android:text="@string/time_expiration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                />
            <TextView
                android:id="@+id/timeExpirationDateTimeTextView"
                android:text="@string/dd_mm_yyyy_hh_mm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <TextView
                android:id="@+id/readyExpirationTextView"
                android:text="@string/ready_expiration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/timeExpirationDateTimeTextView"
                app:layout_constraintStart_toStartOf="parent"
                />
            <TextView
                android:id="@+id/readyExpirationDateTimeTextView"
                android:text="@string/dd_mm_yyyy_hh_mm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/readyExpirationTextView"
                app:layout_constraintEnd_toEndOf="parent"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/updateCredentialsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_credentials"
        app:layout_constraintTop_toBottomOf="@id/userInfoConstraintLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="9dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>